actix-web-thiserror/tests/compile-fail/type-invalid.rs
use actix_web_thiserror::ResponseError;
use thiserror::Error;

#[derive(Debug, Error, ResponseError)]
enum MacroErrors {
  #[response(type = 10)]
  #[error("invalid type")]
  InvalidType,
}

fn main() {}
