actix-web-thiserror/tests/compile-fail/type-invalid.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/type-invalid.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: Invalid `type` in #[response]
